Add form action and method for registration
Updated the form to include action and method attributes for submission.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <body>
     <div class="container">
         <h2>Online Registration Form</h2>
-        <form id="registrationForm">
+        <form id="registrationForm" action="https://formspree.io/f/mdkqwwke" method="POST">
+
             <label for="name">Name:</label>
             <input type="text" id="name" name="name" required>
 
@@ -56,3 +57,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
